# pattern_recognition

./: .gitignore  ex1.py  k_nearest_neighbor.py  requirements.txt
Exercise1/1a/: Main.hs  ex1.cabal  ex1a.cabal  readme.txt
Exercise1/1b/: KMeansClustering.hs  Main.hs  Plot.hs  TestEx1a.hs  TestEx1b.hs  TestKMeansClustering.hs  ex1b.cabal  readme.txt
Exercise1/1b/KMeansClustering/: CIndex.hs  GoldmanKruskalIndex.hs  Internal.hs  TestCIndex.hs
ex1/haskell-version/: Main.hs  ex1.cabal
ex1/haskell2/: Main.hs  TestEx1.hs  ex1
ex1/python/: distance.py  requirements.txt
ex1/python-version/: datapoint.py  vote.py
