name:                ex1a
version:             0.1.0.0
synopsis:            Pattern Recognition: Exercise 1a
description:         K-Nearest-Neighbor
author:              Markus Roth
maintainer:          markus.roth1@students.unibe.ch
build-type:          Simple
cabal-version:       >=1.10

executable ex1a
  ghc-options:         -Wall 
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       parsec
  default-language:    Haskell2010
