name:                ex1b
version:             0.1.0.0
synopsis:            Pattern Recognition: Exercise 1 b
description:         K-Means Clustering
author:              Markus Roth
maintainer:          markus.roth1@students.unibe.ch
build-type:          Simple
cabal-version:       >=1.10

executable ex1
  ghc-options:         -Wall 
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       parsec
  default-language:    Haskell2010

test-suite test-ex1
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       parsec,
                       Cabal,
                       containers == 0.5.*
  default-language:    Haskell2010
